fixing some issues

--- a/src/styles/firstScreen.scss
+++ b/src/styles/firstScreen.scss
@@ -1,5 +1,5 @@
 .bg-first-screen {
-  background-image: URL("../../public/bg5.gif");
+  background-image: URL("bgs.jpg");
   background-size: cover;
   height: 94vh;
 }
@@ -21,7 +21,6 @@
     padding-top: 40vh;
   }
   .bg-first-screen {
-    background-image: URL("../../public/bgs.jpg");
     height: 70vh;
   }
 }
