fixing the background of first screen

--- a/src/styles/firstScreen.scss
+++ b/src/styles/firstScreen.scss
@@ -1,5 +1,5 @@
 .bg-first-screen {
-  background-image: URL("bg.png");
+  background-image: url(../assets/bg.png);
   background-size: cover;
   height: 94vh;
 }
